--- a/.gitignore
+++ b/.gitignore
@@ -9,14 +9,10 @@
 /test/version_tmp/
 /tmp/
 
-## Specific to RubyMotion:
-.dat*
-.repl_history
-build/
-
 ## Documentation cache and generated files:
 /.yardoc/
 /_yardoc/
+/config/
 /doc/
 /rdoc/
 
@@ -26,9 +22,6 @@ build/
 
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
-# Gemfile.lock
-# .ruby-version
-# .ruby-gemset
-
-# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
+Gemfile.lock
+.ruby-version
+.ruby-gemset
